# kmerCounter

./: CMakeLists.txt  LICENSE  README  fastqReader.cpp  fastqReader.h  keyCache.h  kmerCounter.h  kmerError.cpp  kmerError.h  kmerUtils.cpp  kmerUtils.h  main.cpp  merizer.cpp  merizer.h  unusedKmerCounters.h
